--- a/website.rw6/QuickLook/Preview.html
+++ b/website.rw6/QuickLook/Preview.html
@@ -12,47 +12,49 @@
 		
 		
 		
-		
-		
 		<script type="text/javascript" src="javascript.js"></script>
 		
 		
 		
 	</head>
 <body>
-<div id="bodyIndent"></div>
 <div id="container"><!-- Start container -->
 	<div id="pageHeader"><!-- Start page header -->
+		<div id="buildings"></div>
+		
 		<h1>Jasper Holton</h1>
 		<h2></h2>
 	</div><!-- End page header -->
-	<div id="banner">
-		<div id="logo"></div>
-		<div id="insert"></div>
-	</div>
+
 	<div id="contentContainer"><!-- Start main content wrapper -->
 		<div id="content"><!-- Start content -->
 			This is a test website.
-			<div class="clearer"></div>
-			<div id="breadcrumbcontainer"><!-- Start the breadcrumb wrapper -->
-				
-			</div><!-- End breadcrumb -->
 		</div><!-- End content -->
+		<div class="clearer"></div>
+		<div id="breadcrumbcontainer"><!-- Start the breadcrumb wrapper -->
+			
+		</div><!-- End breadcrumb -->
 	</div><!-- End main content wrapper -->
+	
 	<div id="sidebarContainer"><!-- Start Sidebar wrapper -->
 		<div id="navcontainer"><!-- Start Navigation -->
 			<ul><li><a href="./" rel="" id="current">Test</a></li></ul>
-		</div><!-- End navigation -->
+			<br style="clear: left;" />
+		</div><!-- End navigation --> 
 		<div id="sidebar"><!-- Start sidebar content -->
 			<h1 class="sideHeader"></h1><!-- Sidebar header -->
-			 <br /><!-- sidebar content you enter in the page inspector -->
+			<!-- sidebar content you enter in the page inspector -->
 			 <!-- sidebar content such as the blog archive links -->
 		</div><!-- End sidebar content -->
 	</div><!-- End sidebar wrapper -->
+	
 	<div class="clearer"></div>
-</div><!-- End container -->
+	
 	<div id="footer"><!-- Start Footer -->
 		<p>&copy; 2015 Jasper Holton <a href="#" id="rw_email_contact">Contact Me</a><script type="text/javascript">var _rwObsfuscatedHref0 = "mai";var _rwObsfuscatedHref1 = "lto";var _rwObsfuscatedHref2 = ":ja";var _rwObsfuscatedHref3 = "spe";var _rwObsfuscatedHref4 = "r@h";var _rwObsfuscatedHref5 = "olt";var _rwObsfuscatedHref6 = "on.";var _rwObsfuscatedHref7 = "io";var _rwObsfuscatedHref = _rwObsfuscatedHref0+_rwObsfuscatedHref1+_rwObsfuscatedHref2+_rwObsfuscatedHref3+_rwObsfuscatedHref4+_rwObsfuscatedHref5+_rwObsfuscatedHref6+_rwObsfuscatedHref7; document.getElementById("rw_email_contact").href = _rwObsfuscatedHref;</script></p>
 	</div><!-- End Footer -->
+	
+	<div id="sideOverlay"></div>
+</div><!-- End container -->
 </body>
 </html>
