--- a/games/ftg-space-edition/index.html
+++ b/games/ftg-space-edition/index.html
@@ -26,7 +26,7 @@
 </head>
 <div class="pagecontent">
     <h1>FTG: Space Edition v0.1</h1>
-    <p>Bottom text</p>
+    <p>Mouse to move, space to shoot.</p>
 </div>
 <body class="">
     <div class="phaser-example">
