--- a/shaders/mouse/index.html
+++ b/shaders/mouse/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> 
-    <title>LSD</title>
+    <title>Test</title>
     <meta charset="utf-8">
 
     <!-- This app's includes -->
@@ -11,7 +11,7 @@
     <!-- End apps includes -->
 </head>
 <body class="">
-    <div class="lsd">
+    <div class="shader">
     </div>
 </body>
 </html>
