--- a/exchange.html
+++ b/exchange.html
@@ -2,7 +2,7 @@
 <html class="en">
 <head>
   <meta charset="utf-8">
-  <title>Jasper Holton</title>
+  <title>Exchange</title>
   <meta name="description" content="">
   <meta name=viewport content="width=device-width, initial-scale=1">
   <meta name="mobile-web-app-capable" content="yes">
@@ -30,14 +30,6 @@
 
   <link rel="stylesheet" type="text/css" href="index.css">
   <style>
-  .ui.inverted.segment, .ui.primary.inverted.segment {
-    padding-bottom: 5%;
-    background-image: url("images/background.jpg");
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    color: rgba(255, 255, 255, 0.9);
-  }
 
   .ui.inverted.vertical.footer.segment {
     background-image: none;
@@ -52,15 +44,6 @@
     background-color: #2185D0;
   }
 
-  .ui.text.container {
-    font-size: 1.14285714rem;
-    padding-top: 15%;
-  }
-
-  .ui.block.medium.inverted.header {
-    border: none;
-    background-color: C0C0C0;
-  }
 
   .ui.huge.primary.button {
     margin-top: 1%;
@@ -117,7 +100,7 @@
 <body>
 
   <!-- Page Contents -->
-  <div class="pusher">
+  <div class="pusher3">
     <div class="ui inverted vertical masthead center aligned segment">
 
       <!-- Main Menu-->
@@ -126,14 +109,14 @@
           <a class="toc item">
             <i class="sidebar icon"></i>
           </a>
-          <a class="active item">Home</a>
+          <a href="index.html" class="item">Home</a>
         
         <div class="ui dropdown item">
             Blogs
             <i class="dropdown icon"></i>
             <div class="menu">
-                <a class="item" href="blogs/code.html">Code Blog</a>
-                <a class="item" href="blogs/exchange.html">Exchange Blog</a>
+                <a class="item" href="code.html">Code Blog</a>
+                <a class="item" href="exchange.html">Exchange Blog</a>
             </div>
         </div>
         
@@ -145,54 +128,21 @@
               <a class="item" href="project2/index.html">Test2</a>
             </div>
           </div>
-          <a class="item" href="https://github.com/UAFASRA/2015module_comp-sci">Github</a>
+          <a class="item" href="https://github.com/jcholton">Github</a>
         </div>
-      </div>
-
-      <div class="ui text container">
-        <h1 class="ui block medium inverted header">
-          Jasper Holton
-        </h1>
-        <h2 class="ui block medium inverted header">The official site of Jasper Holton</h2>
-        <div class="ui huge primary button"><a href="http://uaf.edu/asra/summer-programs/middle-school/2013-modules/robotics/">Learn More <i class="right arrow icon"></i></a></div>
       </div>
 
     </div>
 
-    <div class="ui vertical stripe segment">
-      <div class="ui middle aligned stackable grid container">
-        <div class="row">
-          <div class="eight wide column">
-            <h3 class="ui header">About Me</h3>
-            <p>Hi there. I was never very good at introductions.</p>
-            <h3 class="ui header">My Projects</h3>
-            <p>On this site you will find information about my recent projects.</p>
-          </div>
-          <div class="six wide right floated column">
-            <img src="images/pis.jpg" class="ui large bordered rounded image">
-          </div>
-        </div>
-        <div class="row">
-          <div class="center aligned column">
-            <a class="ui huge button" href="http://uaf.edu/asra/summer-programs/middle-school/2013-modules/robotics/">Check Us Out</a>
-          </div>
-        </div>
-      </div>
-    </div>
 
 
-    <div class="ui vertical stripe quote segment">
-      <div class="ui equal width stackable internally celled grid">
-        <div class="center aligned row">
-          <div class="column">
-            <h3>"As a scientist, you come to understand that the world around you is always an experiment."</h3>
-            <p>
-              <img src="images/me.jpg" class="ui avatar image"> <b>Jasper</b> | Student
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
+<div class="ui raised very padded text container segment">
+    <h2 class="ui header">WebGL Shaders: Combining Coding and Art</h2>
+    <p>
+    <img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | August 3, 2015
+        </p>
+    <p>Blog blog blog...</p>
+</div>
 
 
     <div class="ui inverted vertical footer segment">
