Website fixes, completions, and blog updates.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="description" content="">
   <meta name=viewport content="width=device-width, initial-scale=1">
   <meta name="mobile-web-app-capable" content="yes">
+      <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+      <meta http-equiv="Pragma" content="no-cache" />
+      <meta http-equiv="Expires" content="0" />
 
   <link rel="stylesheet" type="text/css" href="semantic-ui/components/reset.css">
   <link rel="stylesheet" type="text/css" href="semantic-ui/semantic.min.css">
@@ -141,11 +144,17 @@
             Projects
             <i class="dropdown icon"></i>
             <div class="menu">
-              <a class="item" href="project1/index.html">Test1</a>
-              <a class="item" href="project2/index.html">Test2</a>
+              <a class="item" href="http://uafasra.github.io/2015module_comp-sci/" target="_blank">ASRA 2015</a>
+              <a class="item" href="projects/Crimson-Deep/Game.html" target="_blank">Indev Phaser Game</a>
+              <a class="item" href="shaders/sloth/index.html" target="_blank">Shader</a>
+              <a class="item" href="shaders/storm/index.html" target="_blank">Storm</a>
+              <a class="item" href="shaders/fractals/index.html" target="_blank">Fractals</a>
+              <a class="item" href="shaders/fire/index.html" target="_blank">Fire</a>
+              <a class="item" href="shaders/scope/index.html" target="_blank">Scope</a>
+              
             </div>
           </div>
-          <a class="item" href="ttps://github.com/jcholton">Github</a>
+          <a class="item" href="https://github.com/jcholton">Github</a>
         </div>
       </div>
 
@@ -163,13 +172,13 @@
       <div class="ui middle aligned stackable grid container">
         <div class="row">
           <div class="eight wide column">
-            <h3 class="ui header">About Me</h3>
-            <p>Hi there. I was never very good at introductions.</p>
+            <h3 class="ui header">About This Site</h3>
+            <p>Hello. It seems that by some chance or fortune you have happened upon this web site, holton.io. In this site you will find blogs and other writings by me, as well as links to some of my projects and other places you can find me. But who am I? Well, allow me to introduce myself. I am Jasper C. Holton. I am a programmer, scientist, and visionary. I beleive the future calls for those who strive to push the bouandries of human knowledge and exploration.</p>
             <h3 class="ui header">My Projects</h3>
-            <p>On this site you will find information about my recent projects.</p>
+            <p>On this site you will find information about my recent projects. I have been working on various projects, such as volunteering as an assistant instructor for ASRA, building severall different MicroMouse robots, and working with game design and WebGL shaders.</p>
           </div>
-          <div class="six wide right floated column">
-            <img src="images/pis.jpg" class="ui large bordered rounded image">
+          <div class="seven wide right floated column">
+            <img src="images/robotics.jpg" class="ui large bordered rounded image">
           </div>
         </div>
               </div>
@@ -180,7 +189,7 @@
       <div class="ui equal width stackable internally celled grid">
         <div class="center aligned row">
           <div class="column">
-            <h3>"As a scientist, you come to understand that the world around you is always an experiment."</h3>
+            <h3>"The future calls for those who strive to push the boumdries of human knowledge and exploration"</h3>
             <p>
               <img src="images/me.jpg" class="ui avatar image"> <b>Jasper</b> | Student
             </p>
@@ -194,16 +203,17 @@
       <div class="ui container">
         <div class="ui stackable inverted divided equal height stackable grid">
           <div class="three wide column">
-            <h4 class="ui inverted header">About</h4>
+            <h4 class="ui inverted header">Find me</h4>
             <div class="ui inverted link list">
               <a href="mailto:jasper@holton.io" class="item">Contact Me</a>
               <a href="http://github.com/jcholton" class="item">Github Page</a>
-              <a href="links.html" class="item">Links</a>
+              <a href="https://www.youtube.com/user/wenikalla/" class="item">YouTube</a>
+              <a href="http://stackoverflow.com/users/2225373/jasper-holton" class="item">StackOverFlow</a>
             </div>
           </div>
           <div class="seven wide column">
             <h4 class="ui inverted header">About This Page</h4>
-            <p>This is my website in progress</p>
+            <p>"On résiste à l'invasion des armées; on ne résiste pas à l'invasion des idées." - Victor Hugo</p>
           </div>
         </div>
       </div>
