Linking fixes, so they open in new tabs

--- a/code.html
+++ b/code.html
@@ -202,10 +202,10 @@
             <div class="three wide column">
                 <h4 class="ui inverted header">Find me</h4>
                 <div class="ui inverted link list">
-                    <a href="mailto:jasper@holton.io" class="item">Contact Me</a>
-                    <a href="http://github.com/jcholton" class="item">Github Page</a>
-                    <a href="https://www.youtube.com/user/wenikalla/" class="item">YouTube</a>
-                    <a href="http://stackoverflow.com/users/2225373/jasper-holton" class="item">StackOverFlow</a>
+                    <a href="mailto:jasper@holton.io" class="item" target="_blank">Contact Me</a>
+                    <a href="http://github.com/jcholton" class="item" target="_blank">Github Page</a>
+                    <a href="https://www.youtube.com/user/wenikalla/" class="item" target="_blank">YouTube</a>
+                    <a href="http://stackoverflow.com/users/2225373/jasper-holton" class="item" target="_blank">StackOverFlow</a>
                 </div>
             </div>
             <div class="seven wide column">
