--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
       <div class="ui middle aligned stackable grid container">
         <div class="row">
           <div class="eight wide column">
-            <h3 class="ui header">Welcome to my <a href="https://domains.google.com/about/">domain</a></h3>
+            <h3 class="ui header">Welcome to my <a href="https://domains.google.com/about/" target="_blank">domain</a></h3>
             <p>Hello. It seems that by some chance or fortune you have happened upon this web site, holton.io. In this site you will find personal essays and other writings by me, as well as links to some of my projects and other places you can find me. But who am I? Well, allow me to introduce myself. I am Jasper C. Holton. I am a programmer, scientist, and visionary. I beleive the future calls for those who strive to push the bouandries of human knowledge and exploration.</p>
             <h3 class="ui header">My Projects</h3>
             <p>On this site you will find information about my recent projects. I have been working on various projects, such as volunteering as an assistant instructor for ASRA, building severall different MicroMouse robots, and working with game design and WebGL shaders.</p>
             <h3 class="ui header">Site information</h3>
-            <p>This site was created using <a href="http://semantic-ui.com/">Semantic UI</a> and is hosted by <a href="https://pages.github.com/">Github Pages</a>. The domain name service is provided by <a href="https://www.namecheap.com/">NameCheap</a>.</p>
+            <p>This site was created using <a href="http://semantic-ui.com/" target="_blank">Semantic UI</a> and is hosted by <a href="https://pages.github.com/" target="_blank">Github Pages</a>. The domain name service is provided by <a href="https://www.namecheap.com/" target="_blank">NameCheap</a>.</p>
           </div>
           <div class="seven wide right floated column">
             <img src="images/robotics.jpg" class="ui large bordered rounded image">
@@ -209,10 +209,10 @@
           <div class="three wide column">
             <h4 class="ui inverted header">Find me</h4>
             <div class="ui inverted link list">
-              <a href="mailto:jasper@holton.io" class="item">Contact Me</a>
-              <a href="http://github.com/jcholton" class="item">Github Page</a>
-              <a href="https://www.youtube.com/user/wenikalla/" class="item">YouTube</a>
-              <a href="http://stackoverflow.com/users/2225373/jasper-holton" class="item">StackOverFlow</a>
+              <a href="mailto:jasper@holton.io" class="item" target="_blank">Contact Me</a>
+              <a href="http://github.com/jcholton" class="item" target="_blank">Github Page</a>
+              <a href="https://www.youtube.com/user/wenikalla/" class="item" target="_blank">YouTube</a>
+              <a href="http://stackoverflow.com/users/2225373/jasper-holton" class="item" target="_blank">StackOverFlow</a>
             </div>
           </div>
           <div class="seven wide column">
