--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="utf-8">
   <title>Home</title>
   <meta name="description" content="">
+      
   <meta name=viewport content="width=device-width, initial-scale=1">
   <meta name="mobile-web-app-capable" content="yes">
       <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
       <meta http-equiv="Pragma" content="no-cache" />
       <meta http-equiv="Expires" content="0" />
+      
+      <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 
   <link rel="stylesheet" type="text/css" href="semantic-ui/components/reset.css">
   <link rel="stylesheet" type="text/css" href="semantic-ui/semantic.min.css">
