--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <meta http-equiv="Pragma" content="no-cache" />
       <meta http-equiv="Expires" content="0" />
       
-      <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+      
+          <link rel="shortcut icon" href="http://holton.io/favicon.ico">
 
   <link rel="stylesheet" type="text/css" href="semantic-ui/components/reset.css">
   <link rel="stylesheet" type="text/css" href="semantic-ui/semantic.min.css">
