--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <meta http-equiv="Expires" content="0" />
       
       
-          <link rel="shortcut icon" href="http://holton.io/favicon.ico">
+      <link rel="icon" href="http://holton.io/favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="http://holton.io/favicon.ico" type="image/x-icon" />
 
   <link rel="stylesheet" type="text/css" href="semantic-ui/components/reset.css">
   <link rel="stylesheet" type="text/css" href="semantic-ui/semantic.min.css">
