--- a/exchange.html
+++ b/exchange.html
@@ -131,6 +131,7 @@
                             <i class="dropdown icon"></i>
                             <div class="menu">
                                 <a class="item" href="http://uafasra.github.io/2015module_comp-sci/" target="_blank">ASRA 2015</a>
+                                <a class="item" href="http://www.instructables.com/id/Easy-Adjustable-Speed-Pocket-Fan/" target="_blank">Speed Adjust Fan</a>
                                 <a class="item" href="projects/Crimson-Deep/Game.html" target="_blank">Indev Phaser Game</a>
                                 <a class="item" href="shaders/sloth/index.html" target="_blank">Shader</a>
                                 <a class="item" href="shaders/storm/index.html" target="_blank">Storm</a>
