--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
             Personal Essay Collection
             <i class="dropdown icon"></i>
             <div class="menu">
-                <a class="item" href="code.html" target="_blank">Code Essays</a>
-                <a class="item" href="exchange.html" target="_blank">Exchange Essays</a>
+                <a class="item" href="code.html">Code Essays</a>
+                <a class="item" href="exchange.html">Exchange Essays</a>
             </div>
         </div>
         
