Edited index, updated exchange, added pictures

--- a/exchange.html
+++ b/exchange.html
@@ -132,6 +132,21 @@
             <p>This page contains a series of personal essays, with the newest being first and the oldest being last. It would be best to read these in chronological order. These personal essays are similar to some sort of blog post, and I will continue to update them as time permits.</p>
          </div>
          <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Saying Goodbye</h2>
+             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | August 10, 2015</p>
+                 <p>This essay will be updated later tonight/tomorrow. Check back then!</p>
+         </div>
+         <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Anticipation</h2>
+             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | August 9, 2015</p>
+                 <p>Well, today is the last day that I will spend in Fairbanks. This afternoon, I finished packing my bags. I also finished packing up and cleaning my room, and it's emptiness reminds me of a quote from <a href="https://en.wikipedia.org/wiki/Confucius" target="_blank">Confucius</a>: "The will to win, the desire to succeed, the urge to reach your full potential... these are the keys that will unlock the door to personal excellence."</p>
+                 <img src="images/emptyroom.jpg" class="ui large bordered rounded image">
+                 <p>(Above) My empty room</p>
+                 <p>I have lived in Fairbanks for as long as I can remember, but I am still happy to leave. Before, I thought by this time that I would be sad and worried about leaving, and even have doubts about whether I should be going on exchange. However, I don't seem to be having me. I am still confident that this is a good decision. In fact, I am more confident than I have ever been. The anticipation is almost electric. It's like something is pulling me from every direction, and I can feel it pulsing through my veins. I realize how much this exchange really means to me because as the hours and minutes go by getting closer to midnight, my heart beats and my mind races even faster than before.</p>
+                 <img src="images/potential.jpg" class="ui large bordered rounded image">
+                 <p>I may not be ready for everything. My German language skills are inadequate for normal conversation, my forgetfullness surley means I am leaving something behind, and I can't prepare for the new experiences that I will find in Germany. Even so, I know I am ready for the challenge, and beyond this, I know I am ready to give this everything I've got. As <a href="https://en.wikipedia.org/wiki/Winston_Churchill" target="_blank">Winston Churchill</a> once said, "Some people dream of success, while others wake up and work hard at it." While this exchange has been my dream for quite some time, the person I am is the latter.</p>
+         </div>
+         <div class="ui raised very padded text container segment">
             <h2 class="ui header">Moving Out</h2>
             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | August 5, 2015</p>
             <p>For me, leaving the country for a year doesn't just mean packing up my bags and tidying up my room. When I come back to Alaska next summer, I won't have a house to come back to. My father took a new job in Hawaii, and we have a house there which my parents will be staying in. My sister moved out of the house several days ago, and now lives with a roommate in a cabin near the University. Where does this leave the house I live in now, which I have lived in for over a decade?</p>
@@ -156,7 +171,7 @@
             </p>
             <img src="images/tickets.jpg" class="ui large bordered rounded image">
             <p>
-               I'm going to miss my friends here in Fairbanks. And I'm going to miss my home. But I know this year will be worth it. I look forward to the challenge and I cannot wait for the experience. And the fact is, when 1:25 AM comes around on the 10th of August, and I step on to that plane, I'm not going to look back.
+               I'm going to miss my friends here in Fairbanks. And I'm going to miss my home. But I know this year will be worth it. I look forward to the challenge and I cannot wait for the experience. And the fact is, when 1:25 AM comes around on the 10th of August and I step on to that plane, I'm not going to look back.
             </p>
          </div>
          <!-- ESSAYS END HERE --->
