--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="ui equal width stackable internally celled grid">
                <div class="center aligned row">
                   <div class="column">
-                     <h3>"The future calls for those who strive to push the boumdries of human knowledge and exploration"</h3>
+                     <h3>"The future calls for those who strive to push the boundaries of human knowledge and exploration"</h3>
                      <p>
                         <img src="images/me.jpg" class="ui avatar image"> <b>Jasper</b> | Student
                      </p>
