Added Stuff I Like, possibly fixed favicon

--- a/exchange.html
+++ b/exchange.html
@@ -3,14 +3,14 @@
    <head>
       <meta charset="utf-8">
       <title>Exchange Essays</title>
-      <meta name="description" content="">
+            <meta name="description" content="">
       <meta name=viewport content="width=device-width, initial-scale=1">
       <meta name="mobile-web-app-capable" content="yes">
       <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
       <meta http-equiv="Pragma" content="no-cache" />
       <meta http-equiv="Expires" content="0" />
-      <link rel="icon" href="http://holton.io/favicon.ico" type="image/x-icon" />
-      <link rel="shortcut icon" href="http://holton.io/favicon.ico" type="image/x-icon" />
+      <link rel="icon" href="favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
       <link rel="stylesheet" type="text/css" href="semantic-ui/components/reset.css">
       <link rel="stylesheet" type="text/css" href="semantic-ui/semantic.min.css">
       <link rel="stylesheet" type="text/css" href="semantic-ui/components/site.css">
@@ -28,12 +28,6 @@
       <link rel="stylesheet" type="text/css" href="semantic-ui/components/icon.css">
       <link rel="stylesheet" type="text/css" href="semantic-ui/components/sidebar.css">
       <link rel="stylesheet" type="text/css" href="semantic-ui/components/transition.css">
-      <script src="jquery.js"></script>
-      <script>
-         $(function(){
-           $("#includedContent").load("essays/exchange.html");
-           });
-      </script>
       <link rel="stylesheet" type="text/css" href="index.css">
       <style>
          .ui.inverted.vertical.footer.segment {
@@ -120,11 +114,12 @@
                         <a class="item" href="shaders/scope/index.html" target="_blank">Scope</a>
                      </div>
                   </div>
+                  <a class="item" href="sil.html">SIL(new)</a>
                   <a class="item" href="https://github.com/jcholton">Github</a>
                </div>
             </div>
          </div>
-         <!-- ESSAYS START HERE --->
+           <!-- ESSAYS START HERE --->
          <!-- ESSAYS START HERE --->
          <!-- ESSAYS START HERE --->
          <div class="ui raised very padded text container segment">
