--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                         <a class="item" href="shaders/scope/index.html" target="_blank">Scope</a>
                      </div>
                   </div>
+                  <a class="item" href="sil.html">SIL(new)</a>
                   <a class="item" href="https://github.com/jcholton">Github</a>
                </div>
             </div>
