--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
       <meta http-equiv="Pragma" content="no-cache" />
       <meta http-equiv="Expires" content="0" />
-      <link rel="icon" href="http://holton.io/favicon.ico" type="image/x-icon" />
-      <link rel="shortcut icon" href="http://holton.io/favicon.ico" type="image/x-icon" />
+      <link rel="icon" href="favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
       <link rel="stylesheet" type="text/css" href="semantic-ui/components/reset.css">
       <link rel="stylesheet" type="text/css" href="semantic-ui/semantic.min.css">
       <link rel="stylesheet" type="text/css" href="semantic-ui/components/site.css">
