--- a/exchange.html
+++ b/exchange.html
@@ -127,9 +127,19 @@
             <p>This page contains a series of personal essays, with the newest being first and the oldest being last. It would be best to read these in chronological order. These personal essays are similar to some sort of blog post, and I will continue to update them as time permits.</p>
          </div>
          <div class="ui raised very padded text container segment">
-             <h2 class="ui header">Saying Goodbye</h2>
-             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | August 10, 2015</p>
-                 <p>This essay will be updated later tonight/tomorrow. Check back then!</p>
+             <h2 class="ui header">Travel to Germany</h2>
+             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | August 11, 2015</p>
+                 <p>Around 1:00 AM yesterday moring, I said goodbye to my friends and family for a year. It was sad to think that I won't be seeing these wonderful people for a while, but I was also excited to be on my way.</p>
+                 <div>
+                     <img src="images/blazerfront.jpg" class="ui medium bordered rounded image" style="float: left;">
+                     <img src="images/blazerback.jpg" class="ui medium bordered rounded image"style="float: right;">
+                 </div>
+                 <p>My flight to Seattle was fairly fast and easy, and I even managed to get some sleep. I groggily left the plane and headed down to the Alaska Airlines board room, where I waited for my next flight. Due to delays, my layover ended up being nearly twelve hours. The flight went pretty well; I managed to sleep a bit and also sharpen up on my German.</p>
+                 <div>
+                     <img src="images/cityhopper.jpg" class="ui medium bordered rounded image" style="float: left;">
+                     <img src="images/view.jpg" class="ui medium bordered rounded image"style="float: right;">
+                 </div>
+                 <p>I found myself walking off the plane to a beautiful and sunny day in Amsterdam, and by the time I had walked across the airport my next flight was already boarding. The KLM City Hopper plane took me to Dusseldorf, where my wonderful host family was waiting. I met Martina, Cornelius, Laurenz, and Franka, as well as their exchange student from France, Maria. They brought me to their wonderful home in Wesel, and welcomed me with open arms. I would write more but school starts tomorrow and I want to get some sleep.</p>
          </div>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Anticipation</h2>
