New essay. Also some fixes/changes

--- a/code.html
+++ b/code.html
@@ -132,7 +132,13 @@
          
          <div class="ui raised very padded text container segment">
             <h2 class="ui header">----Personal Essays----</h2>
-            <p>This page contains a series of personal essays, with the newest being first and the oldest being last. It would be best to read these in chronological order. These personal essays are similar to some sort of blog post, and I will continue to update them as time permits.</p>
+            <p>This page contains a series of personal essays, with the newest being first and the oldest being last. It would be best to read these in chronological order. These personal essays are similar to some sort of blog post, and I will continue to update them as time permits. Also, note that I am aware my writing is bad and constructive criticism is welcome. <a href="mailto:jasper@holton.io" target="_blank">Send me an email</a>.</p>
+         </div>
+         <div class="ui raised very padded text container segment">
+             <h2 class="ui header">My Exchange in Germany</h2>
+             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | August 12, 2015</p>
+             <p>I would like to be able to update this essay collection more often, but unfortunatley I do not have the time. I am currently on a youth exchange in <a href="https://en.wikipedia.org/wiki/Wesel" target="_blank">Wesel, Germany</a>. Because of this, my time is limited and my focus is no longer on coding and writing these essays. However, I will continue updating my exchange essays, which can be found <a href="exchange.html" target="_blank">here</a>.</p>
+             <img src="images/tickets.jpg" class="ui large bordered rounded image">
          </div>
          <div class="ui raised very padded text container segment">
             <h2 class="ui header">WebGL Shaders: Combining Coding and Art</h2>
@@ -143,21 +149,21 @@
             <img src="images/fireshader.png"  class="ui large bordered rounded image">
             <p><a href="http://phaser.io/">Phaser.io in a WebGL animation from <a href="http://glslsandbox.com/">GLSLSandbox</a>. </p>
             <img src="images/digitalstorm.png"  class="ui large bordered rounded image">
-            <p>A <a href="http://holton.io/shaders/storm/index.html">digital storm</a> I created</p>
+            <p>A <a href="shaders/storm/index.html">digital storm</a> I created</p>
             <p>Here are some other shaders that are very interesting, I reccomend you check them out. These probably will work best on non-mobile devices. Some of these are also still in development, and I will have more here in the future.</p>
             <ul>
-               <li><a href="http://holton.io/shaders/fire/index.html" target="_blank">Digital Fire</a></li>
-               <li><a href="http://holton.io/shaders/storm/index.html" target="_blank">Digital Storm</a></li>
-               <li><a href="http://holton.io/shaders/fractals/index.html" target="_blank">Fractals</a></li>
-               <li><a href="http://holton.io/shaders/mouse/index.html" target="_blank">Mouse</a></li>
-               <li><a href="http://holton.io/shaders/scope/index.html" target="_blank">Scope</a></li>
-               <li><a href="http://holton.io/shaders/seascape/index.html" target="_blank">Seascape</a></li>
-               <li><a href="http://holton.io/shaders/sloth/index.html" target="_blank">Sloth</a></li>
-               <li><a href="http://holton.io/shaders/starlight/index.html" target="_blank">Starlight</a></li>
-               <li><a href="http://holton.io/shaders/swirl/index.html" target="_blank">Swirl</a></li>
-               <li><a href="http://holton.io/shaders/test/index.html" target="_blank">Test</a></li>
-               <li><a href="http://holton.io/shaders/tunnel/index.html" target="_blank">Tunnel</a></li>
-               <li><a href="http://holton.io/shaders/andy/index.html" target="_blank">Andy</a> (Dedicated to Andy James), who can be found <a href="http://www.andrewmartinjames.com" target="_blank">here</a></li>
+               <li><a href="shaders/fire/index.html" target="_blank">Digital Fire</a></li>
+               <li><a href="shaders/storm/index.html" target="_blank">Digital Storm</a></li>
+               <li><a href="shaders/fractals/index.html" target="_blank">Fractals</a></li>
+               <li><a href="shaders/mouse/index.html" target="_blank">Mouse</a></li>
+               <li><a href="shaders/scope/index.html" target="_blank">Scope</a></li>
+               <li><a href="shaders/seascape/index.html" target="_blank">Seascape</a></li>
+               <li><a href="shaders/sloth/index.html" target="_blank">Sloth</a></li>
+               <li><a href="shaders/starlight/index.html" target="_blank">Starlight</a></li>
+               <li><a href="shaders/swirl/index.html" target="_blank">Swirl</a></li>
+               <li><a href="shaders/test/index.html" target="_blank">Test</a></li>
+               <li><a href="shaders/tunnel/index.html" target="_blank">Tunnel</a></li>
+               <li><a href="shaders/andy/index.html" target="_blank">Andy</a> (Dedicated to Andy James), who can be found <a href="http://www.andrewmartinjames.com" target="_blank">here</a></li>
             </ul>
             <p>If you are interested in looking at the code for these, you can look on my <a href="http://phaser.io/">Github</a>. All of it is open source, and you can click the button above to get to it.
             </p>
