Changed learn more button to scroll down

--- a/index.html
+++ b/index.html
@@ -139,10 +139,11 @@
                   Jasper Holton
                </h1>
                <h2 class="ui block medium inverted header">The official site of Jasper Holton</h2>
-               <div class="ui huge primary button"><a href="code.html">Learn More <i class="right arrow icon"></i></a></div>
+               <div class="ui huge primary button"><a href="#learnmore">Learn More <i class="right arrow icon"></i></a></div>
             </div>
          </div>
          <div class="ui vertical stripe segment">
+            <A NAME="learnmore">
             <div class="ui middle aligned stackable grid container">
                <div class="row">
                   <div class="eight wide column">
